--- a/code/FinalProject.Rmd
+++ b/code/FinalProject.Rmd
@@ -1,11 +1,13 @@
-Seamus Stein
-QBS 103
-
-Presentation 1
+# Seamus Stein
+## QBS 103
+## Presentation 1
+## July 25
 
 ```{r}
-setwd("/Users/seamus/QBS_103_Project/QBS_103_Data")
+# set working directory to data folder
+setwd("/Users/seamus/QBS_103_Project/QBS_103/QBS_103_Data")
 
+# read in gene expression and metadata files 
 gene_expression <- read.csv(file = "QBS103_finalProject_geneExpression.csv", row.names = 1)
 
 meta_data <- read.csv(file = "QBS103_finalProject_metadata.csv", row.names = 1)
@@ -23,9 +25,7 @@ head(APOM_expression)
 metadata_APOM_expression <- cbind(meta_data, APOM_expression)
 head(metadata_APOM_expression)
 ```
-```{r}
-summary(metadata_APOM_expression)
-```
+
 
 Using ggplot2 generate the following plots for your covariates of choice
 
@@ -50,18 +50,21 @@ myTheme <- theme(
 ```
 
 ```{r}
+# define color pallete for APOM expression histogram
 colorPalette<- c('#FCDCDC')
 
+# plot histogram of APOM expression 
 ggplot(metadata_APOM_expression, aes(x = APOM)) +
   geom_histogram(binwidth = 1, col = 'black', fill = colorPalette ) +
   ggtitle("Histogram of APOM expression") +
   labs(x = "APOM Expression", y = "Frequency") +
   myTheme
 ```
-b) Scatter plot for gene expression and continuous covariate Age
+
+b) Scatter plot for gene expression and continuous covariate age
 
 ```{r}
-# convert character age to numberic
+# convert character age to numeric
 metadata_APOM_expression$age <- as.numeric(metadata_APOM_expression$age)
 head(metadata_APOM_expression)
 ```
@@ -73,15 +76,11 @@ ggplot(metadata_APOM_expression, aes(x = age, y = APOM)) +
   ggtitle("APOM Expression by Age") +
   myTheme
 ```
+
 c) Boxplot of gene expression separated by both categorical covariates 
 Categorical covariates: Sex, icu_status
-```{r}
-# convert unknown sex to NA
-#metadata_APOM_expression$sex[metadata_APOM_expression$sex == "unknown"] <- NA
-#data <- metadata_APOM_expression[if_else(metadata_APOM_expression$sex == "unknown", NA, )]
-head(metadata_APOM_expression)
-#summary(metadata_APOM_expression$sex)
-```
+
+
 ```{r}
 # convert unknown sex to NA
 metadata_APOM_expression$sex <- if_else(metadata_APOM_expression$sex == " unknown", NA, metadata_APOM_expression$sex)
@@ -90,17 +89,17 @@ metadata_APOM_expression$sex <- if_else(metadata_APOM_expression$sex == " unknow
 
 
 ```{r}
-#APOM_no_unknown <- metadata_APOM_expression %>% 
- # filter(!grepl('unknown', sex))
-#[!(metadata_APOM_expression$sex =="unknown"),]
-APOM <- metadata_APOM_expression %>% 
+# clean the data by filtering so sex has no NA
+APOM_clean <- metadata_APOM_expression %>% 
       filter(!is.na(sex))
 ```
 
 ```{r}
+#define color pallete for box plot
 colorPalette2 <- c("#db6d00", "#B6DBFF")
 
-ggplot(APOM, aes(x = icu_status, y = APOM, fill = sex)) + 
+# create box plot of gene expression separated by ICU status and sex
+ggplot(APOM_clean, aes(x = icu_status, y = APOM, fill = sex)) + 
   geom_boxplot() +
   scale_x_discrete(labels = c("Not Admitted", "Admitted")) +
   labs(x = "ICU Status", y = "APOM expression") +
@@ -108,3 +107,8 @@ ggplot(APOM, aes(x = icu_status, y = APOM, fill = sex)) +
   ggtitle("APOM Exprsession by ICU Status and Sex") +
   myTheme
 ```
+
+
+## APOM Gene information
+
+The APOM gene encodes a protein that is an apolipoprotein. The encoded protein is secreted through the plasma membrane but remains membrane-bound. It functions in the transportation of lipids.   
